// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button will a pill shape to match snapshot 1`] = `
<button
  className="mht-24px ptp-6px pbm-6px plt-12px prt-12px fse-14px fwt-500 lht-18px lsg--0p01em dy-flex ais-center jct-center brs-999px tn-background-color-0p2s-ease-opacity-0p2s-ease cror-pointer cr- bwh-1px bsee-solid bcrr- oy-0p9--hover oy-0p95--active outline-none--focus-visible bsw-0-0-0-2px-rgba255-255-255-1-0-0-0-4px---focus-visible"
  disabled={false}
  isHovered={false}
  type="button"
>
  <div
    className="dy-flex fdn-row gp-8px ais-center jct-center cr- mht-24px ptp-6px pbm-6px plt-12px prt-12px fse-14px fwt-500 lht-18px lsg--0p01em cr---hover"
  >
    Pill Shape
  </div>
</button>
`;

exports[`Button with an icon on the left to match snapshot 1`] = `
<button
  className="mht-24px ptp-6px pbm-6px plt-12px prt-12px fse-14px fwt-500 lht-18px lsg--0p01em dy-flex ais-center jct-center brs-999px tn-background-color-0p2s-ease-opacity-0p2s-ease cror-pointer cr- bwh-1px bsee-solid bcrr- oy-0p9--hover oy-0p95--active outline-none--focus-visible bsw-0-0-0-2px-rgba255-255-255-1-0-0-0-4px---focus-visible"
  disabled={false}
  isHovered={false}
  type="button"
>
  <div
    className="dy-flex fdn-row gp-8px ais-center jct-center cr- mht-24px ptp-6px pbm-6px plt-12px prt-12px fse-14px fwt-500 lht-18px lsg--0p01em cr---hover"
  >
    <div
      className="cr- cr---hover"
    >
      <div
        className="wh-24px ht-24px dy-flex jct-center ais-center wht-24 lht-24px cr- tm-rotate0deg"
        size={24}
      >
        <svg
          aria-hidden="false"
          fill="none"
          focusable="false"
          stroke=""
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
    </div>
    Delete
  </div>
</button>
`;

exports[`Button with an icon on the right to match snapshot 1`] = `
<button
  className="mht-24px ptp-6px pbm-6px plt-12px prt-12px fse-14px fwt-500 lht-18px lsg--0p01em dy-flex ais-center jct-center brs-999px tn-background-color-0p2s-ease-opacity-0p2s-ease cror-pointer cr- bwh-1px bsee-solid bcrr- oy-0p9--hover oy-0p95--active outline-none--focus-visible bsw-0-0-0-2px-rgba255-255-255-1-0-0-0-4px---focus-visible"
  disabled={false}
  isHovered={false}
  type="button"
>
  <div
    className="dy-flex fdn-row gp-8px ais-center jct-center cr- mht-24px ptp-6px pbm-6px plt-12px prt-12px fse-14px fwt-500 lht-18px lsg--0p01em cr---hover"
  >
    Delete
    <div
      className="cr- cr---hover"
    >
      <div
        className="wh-24px ht-24px dy-flex jct-center ais-center wht-24 lht-24px cr- tm-rotate0deg"
        size={24}
      >
        <svg
          aria-hidden="false"
          fill="none"
          focusable="false"
          stroke=""
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
    </div>
  </div>
</button>
`;
